--- a/dagster/requirements.txt
+++ b/dagster/requirements.txt
@@ -6,3 +6,9 @@ dagster-graphql==1.3.2
 dagster-postgres==0.19.2
 python-dotenv
 dagster-dbt==0.19.2
+
+dbt-core==1.5.11
+dbt-snowflake==1.5.1
+
+python-dotenv
+pendulum>=2.1,<3.0
