--- a/.example.env
+++ b/.example.env
@@ -11,10 +11,11 @@ MY_DBT_HOST=docker_example_dbt
 MY_DBT_HOST_PORT=8580
 
 ## Snowflake ##
-
+## important to get the SF account details run `SELECT SYSTEM$ALLOWLIST();` on Snowflake and get the host details with the region
+## make sure to create the DEV Schema if the USER you created does not have privileges
 SF_ACCOUNT=
 SF_USER=AIRBYTE_USER
-SF_PASSWORD=
+SF_PASSWORD=password
 SF_DATABASE=AIRBYTE_DATABASE
 SF_ROLE=AIRBYTE_ROLE
 SF_SCHEMA=dev
